--- a/freshock/src/scss/common.scss
+++ b/freshock/src/scss/common.scss
@@ -1,1 +1,41 @@
 // Заголовки, общие БЄМ блоки и проче...
+//========================================================================================================================================================
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+//========================================================================================================================================================
+.title {
+	// .title__value
+	&__value {
+		font-family: "Ruda";
+		font-weight: 600;
+		@include adaptiveValue("font-size", 32, 24);
+		text-align: center;
+		letter-spacing: 0.03em;
+		text-transform: uppercase;
+	}
+}
+//========================================================================================================================================================
+.burger__btn {
+	display: none;
+	@media (max-width: $mobile) {
+		display: block;
+		flex: 1 1 auto;
+	}
+}
+//========================================================================================================================================================
+.burger-block {
+	display: none;
+	@media (max-width: $mobile) {
+		display: block;
+	}
+}
