--- a/freshock/src/scss/style.scss
+++ b/freshock/src/scss/style.scss
@@ -7,23 +7,41 @@
 //&display=swap - добавить при подключении через плагин
 
 // Подключить если есть локальные файлы шрифтов
-//@import "fonts/fonts";
+@import "fonts/fonts";
 
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
-//@import "fonts/icons";
+@import "fonts/icons";
 
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 // Настройки шаблона ============================================================================================================================================================================================================================================================================================================================================================================================
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию из макета
+$fontFamily: "OpenSans";
+$fontSize: rem(16); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #000; // Цвет шрифта по умолчанию
+$mainColor: #121212; // Цвет шрифта по умолчанию
 
+$green-900: #63a60f;
+$green-200: #e0edcf;
+$green-100: #eff6e7;
+
+$dark-900: #121212;
+$dark-800: #31352b;
+$dark-500: #505050;
+
+$red-900: #cf3e3b;
+
+$orange-900: #ff7a00;
+
+$yellow-900: #ffb800;
+
+$silver-600: #c1c1c1;
+$silver-100: #f6f6f6;
+$white: #fff;
+$black: #000;
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
 // Минимальная ширина страницы
@@ -31,7 +49,7 @@ $minWidth: 320;
 // Ширина полотна (макета)
 $maxWidth: 1920;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1290;
 // Общий отступ у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
@@ -41,6 +59,7 @@ $containerWidth: $maxWidthContainer + $containerPadding;
 
 // Брейк-поинты
 $pc: em($containerWidth); // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
+$wdth: em(1100.98);
 $tablet: em(991.98); // Планшеты, некоторые телефоны в горизонтальном положении
 $mobile: em(767.98); // Телефоны L
 $mobileSmall: em(479.98); // Телефоны S
@@ -59,6 +78,8 @@ $responsiveType: 1;
 // Стили тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 
 body {
+	line-height: 1.4;
+	font-weight: 400;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
