--- a/freshock/src/scss/base/forms/button.scss
+++ b/freshock/src/scss/base/forms/button.scss
@@ -2,12 +2,115 @@
 // Снипет (HTML): btn
 
 .button {
-	display: inline-flex;
-	padding: 0px 0px;
-	@media (any-hover: hover) {
-		&:hover {
+	display: inline-block;
+	text-align: center;
+	font-size: rem(18);
+	line-height: 130%;
+	line-height: math.div(23, 18);
+	border-radius: rem(6);
+	letter-spacing: 0.03em;
+	transition: background-color 0.3s ease 0s;
+
+	// .button_green
+	&_green {
+		background-color: $green-900;
+		color: $white;
+		padding: rem(12) rem(24);
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: #4d810c;
+			}
+		}
+		&:focus {
+			background-color: $green-900;
+			box-shadow: 0px 0px 0px 4px #e0edcf;
+		}
+		&:active {
+			background: $green-900;
+			box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+			color: rgba(255, 255, 255, 0.5);
 		}
 	}
+
+	// .button_white
+	&_white {
+		padding: rem(12) rem(24);
+		background: $white;
+		border: 1px solid $green-900;
+		color: $green-900;
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: #eff6e7;
+			}
+		}
+		&:focus {
+			background-color: $white;
+			border: 1px solid $green-900;
+			box-shadow: 0px 0px 0px 4px rgba(99, 166, 14, 0.5);
+		}
+		&:active {
+			background: $white;
+			border: 1px solid $green-900;
+			box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.1);
+			color: rgba(99, 166, 14, 0.5);
+		}
+	}
+
+	// .button_green-small
+	&_green-small {
+		font-weight: 700;
+		font-size: rem(12);
+		line-height: math.div(16, 12);
+		text-transform: uppercase;
+		color: $white;
+		background: #63a60e;
+		border-radius: 0px 6px 6px 0px;
+		padding: rem(12) rem(10);
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: #4d800c;
+			}
+		}
+		&:focus {
+			background: #63a60e;
+			box-shadow: 0px 0px 0px 4px #e0edcf;
+		}
+		&:active {
+			box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+			color: rgba(255, 255, 255, 0.5);
+		}
+	}
+
+	// .button_dark
+	&_dark {
+		font-weight: 600;
+		font-size: rem(14);
+		color: $white;
+		background-color: $dark-800;
+		border-radius: 0px 6px 6px 0px;
+		padding: rem(16) rem(52);
+		padding-top: rem(16);
+
+		@include adaptiveValue("padding-right", 52, 24, 0, 1290, 767);
+		padding-bottom: rem(16);
+
+		@include adaptiveValue("padding-left", 52, 24, 0, 1290, 767);
+
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: rgba(49, 53, 43, 0.85);
+			}
+		}
+		&:focus {
+			background-color: $dark-800;
+			box-shadow: 0px 0px 0px 4px rgba(255, 255, 255, 0.5);
+		}
+		&:active {
+			box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+			color: rgba(255, 255, 255, 0.5);
+		}
+	}
+
 	&._fw {
 		width: 100%;
 	}
