--- a/freshock/src/scss/base/forms/forms.scss
+++ b/freshock/src/scss/base/forms/forms.scss
@@ -18,11 +18,11 @@
 
 // <BUTTONS>
 // Снипет (HTML): btn
-// @import "button";
+@import "button";
 
 // <INPUTS>
 // Снипет (HTML): inp
-// @import "input";
+@import "input";
 
 // <CHECK>
 // Снипет (HTML): chk
@@ -34,7 +34,7 @@
 
 // <SELECT>
 // Снипет (HTML): sel
-// @import "select";
+@import "select";
 
 // <RATING>
 // Снипет (HTML): rating
