--- a/freshock/src/scss/base/forms/input.scss
+++ b/freshock/src/scss/base/forms/input.scss
@@ -9,11 +9,17 @@ textarea {
 	appearance: none;
 }
 .input {
-	border-radius: 0 !important;
+	//border-radius: 0 !important;
 	width: 100%;
 	display: block;
-	padding: 0px 20px;
-	border: 1px solid #eee;
+	padding: 0px 15px;
+	height: rem(50);
+	border-radius: rem(6) 0 0 rem(6);
+	&::placeholder {
+		font-size: rem(14);
+		letter-spacing: 0.03em;
+		color: $dark-800;
+	}
 	&._form-focus {
 	}
 	&._form-error {
