feat: add section services, top-products and adaptive

--- a/freshock/src/scss/base.scss
+++ b/freshock/src/scss/base.scss
@@ -15,13 +15,13 @@
 // @import "base/maps";
 
 // Стили блока "показать еще"
-// @import "base/showmore";
+@import "base/showmore";
 
 // Стили для липкого блока
 // @import "base/sticky";
 
 // Стили для полноэкранного блока
-// @import "base/fullscreen";
+@import "base/fullscreen";
 
 // Стили для поекраної прокрутки
 // Styles for fullpage scroll
