--- a/freshock/src/scss/common.scss
+++ b/freshock/src/scss/common.scss
@@ -13,6 +13,18 @@
 	overflow: hidden;
 }
 //========================================================================================================================================================
+.page {
+	// .page__main
+	&__main {
+	}
+	// .page__services
+	&__services {
+	}
+	// .page__top-products
+	&__top-products {
+	}
+}
+//========================================================================================================================================================
 .title {
 	// .title__value
 	&__value {
