--- a/freshock/src/scss/base/forms/button.scss
+++ b/freshock/src/scss/base/forms/button.scss
@@ -23,11 +23,11 @@
 		}
 		&:focus {
 			background-color: $green-900;
-			box-shadow: 0px 0px 0px 4px #e0edcf;
+			box-shadow: 0 0 0 rem(4) #e0edcf;
 		}
 		&:active {
 			background: $green-900;
-			box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+			box-shadow: inset 0 rem(4) rem(4) rgba(0, 0, 0, 0.25);
 			color: rgba(255, 255, 255, 0.5);
 		}
 	}
@@ -36,7 +36,7 @@
 	&_white {
 		padding: rem(12) rem(24);
 		background: $white;
-		border: 1px solid $green-900;
+		border: rem(1) solid $green-900;
 		color: $green-900;
 		@media (any-hover: hover) {
 			&:hover {
@@ -45,13 +45,13 @@
 		}
 		&:focus {
 			background-color: $white;
-			border: 1px solid $green-900;
-			box-shadow: 0px 0px 0px 4px rgba(99, 166, 14, 0.5);
+			border: rem(1) solid $green-900;
+			box-shadow: 0 0 0 rem(4) rgba(99, 166, 14, 0.5);
 		}
 		&:active {
 			background: $white;
-			border: 1px solid $green-900;
-			box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.1);
+			border: rem(1) solid $green-900;
+			box-shadow: inset 0 rem(10) rem(4) rgba(0, 0, 0, 0.1);
 			color: rgba(99, 166, 14, 0.5);
 		}
 	}
@@ -64,7 +64,7 @@
 		text-transform: uppercase;
 		color: $white;
 		background: #63a60e;
-		border-radius: 0px 6px 6px 0px;
+		border-radius: 0 rem(6) rem(6) 0;
 		padding: rem(12) rem(10);
 		@media (any-hover: hover) {
 			&:hover {
@@ -73,10 +73,10 @@
 		}
 		&:focus {
 			background: #63a60e;
-			box-shadow: 0px 0px 0px 4px #e0edcf;
+			box-shadow: 0 0 0 rem(4) #e0edcf;
 		}
 		&:active {
-			box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+			box-shadow: inset 0 rem(4) rem(4) rgba(0, 0, 0, 0.25);
 			color: rgba(255, 255, 255, 0.5);
 		}
 	}
@@ -87,7 +87,7 @@
 		font-size: rem(14);
 		color: $white;
 		background-color: $dark-800;
-		border-radius: 0px 6px 6px 0px;
+		border-radius: 0 rem(6) rem(6) 0;
 		padding: rem(16) rem(52);
 		padding-top: rem(16);
 
@@ -103,10 +103,10 @@
 		}
 		&:focus {
 			background-color: $dark-800;
-			box-shadow: 0px 0px 0px 4px rgba(255, 255, 255, 0.5);
+			box-shadow: 0 0 0 rem(4) rgba(255, 255, 255, 0.5);
 		}
 		&:active {
-			box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+			box-shadow: inset 0 rem(4) rem(4) rgba(0, 0, 0, 0.25);
 			color: rgba(255, 255, 255, 0.5);
 		}
 	}
