--- a/freshock/src/scss/base/forms/select.scss
+++ b/freshock/src/scss/base/forms/select.scss
@@ -2,20 +2,20 @@
 // Снипет (HTML): sel
 .select {
 	position: relative;
-	border-radius: 6px;
-	//overflow: hidden;
+	border-radius: rem(6);
+	background-color: $white;
+
 	// .select__body
 	&__body {
 		position: relative;
 		@media (max-width: $mobile) {
-			padding-left: 15px;
+			padding-left: rem(15);
 		}
 	}
 	// .select__title
 	&__title {
 		color: inherit;
 		text-align: left;
-		background-color: $white;
 		cursor: pointer;
 		width: 100%;
 	}
@@ -38,7 +38,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			flex: 0 0 10px;
+			flex: 0 0 rem(10);
 			font-size: rem(8);
 
 			transition: all 0.3s ease 0s;
@@ -57,7 +57,7 @@
 			justify-content: center;
 			align-items: center;
 			align-self: stretch;
-			flex: 0 0 10px;
+			flex: 0 0 rem(10);
 			font-size: rem(16);
 		}
 		&._select-pseudo-label {
@@ -80,24 +80,23 @@
 	&__options {
 		position: absolute;
 		color: $black;
-		top: 50px;
+		top: 50prem (50) x;
 		min-width: 100%;
 		left: 0;
 
 		background-color: $white;
 
-		border: 1px solid #ebebeb;
-		border-radius: 0px 0px 6px 6px;
+		border: rem(1) solid #ebebeb;
+		border-radius: 0 0 rem(6) rem(6);
 		border-top: 0;
-		border-top: 1px solid rgba(193, 193, 193, 0.3);
-		//padding: 15px 0px 15px 0px;
+		border-top: rem(1) solid rgba(193, 193, 193, 0.3);
 	}
 	// .select__scroll
 	&__scroll {
 		overflow-y: auto;
 		overflow-x: hidden;
 		// Максимальная высота
-		max-height: 200px;
+		max-height: rem(200);
 		// Стили скроллбара
 		.simplebar-scrollbar {
 			&::before {
@@ -110,16 +109,16 @@
 		width: 100%;
 		text-align: left;
 		cursor: pointer;
-		padding: 15px 25px;
+		padding: rem(15) rem(25);
 		color: inherit;
 
 		line-height: math.div(19, 16);
 		letter-spacing: 0.03em;
 		color: $black;
 		&:not(:last-child) {
-			border-bottom: 1px solid rgba(193, 193, 193, 0.3);
+			border-bottom: rem(1) solid rgba(193, 193, 193, 0.3);
 		}
-		border-left: 3px solid transparent;
+		border-left: rem(3) solid transparent;
 
 		&._select-selected {
 			background-color: #eee;
@@ -127,7 +126,7 @@
 		@media (any-hover: hover) {
 			&:hover {
 				background-color: #f8f2f2;
-				border-left: 3px solid #63a60e;
+				border-left: rem(3) solid #63a60e;
 			}
 		}
 	}
@@ -144,6 +143,8 @@
 
 	// Состояния селекта
 	&._select-open {
+		background: $green-200;
+		border-radius: rem(6) rem(6) 0 0;
 		z-index: 5;
 	}
 	&._select-disabled {
