--- a/freshock/src/scss/base/forms/rating.scss
+++ b/freshock/src/scss/base/forms/rating.scss
@@ -3,7 +3,8 @@
 .rating {
 	display: flex;
 	align-items: flex-end;
-	font-size: 40px;
+	font-size: 22px;
+	flex-direction: row-reverse;
 	line-height: 0.75;
 	transition: opacity 0.3s ease 0s;
 }
@@ -18,8 +19,8 @@
 .rating__body {
 	position: relative;
 }
-.rating__body::before {
-	content: "★★★★★";
+.rating__body::after {
+	content: "★";
 	display: block;
 }
 .rating__active {
@@ -30,8 +31,8 @@
 	left: 0;
 	overflow: hidden;
 }
-.rating__active::before {
-	content: "★★★★★";
+.rating__active::after {
+	content: "★";
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -49,12 +50,12 @@
 	left: 0;
 }
 .rating__item {
-	flex: 0 0 20%;
+	flex: 0 0 100%;
 	height: 100%;
 	opacity: 0;
 }
 .rating__value {
 	font-size: 50%;
 	line-height: 1;
-	padding: 0px 0px 0px 10px;
+	//padding: 0px 0px 0px 10px;
 }
