--- a/freshock/src/scss/common.scss
+++ b/freshock/src/scss/common.scss
@@ -23,6 +23,9 @@
 	// .page__top-products
 	&__top-products {
 	}
+	// .page__stock
+	&__stock {
+	}
 }
 //========================================================================================================================================================
 .title {
