--- a/freshock/src/scss/home.scss
+++ b/freshock/src/scss/home.scss
@@ -217,11 +217,10 @@
 	// .top-products__box
 	&__box {
 		&:not(:last-child) {
-			margin-bottom: rem(50);
+			@include adaptiveValue("margin-bottom", 50, 25);
 		}
 	}
 }
-
 .list {
 	display: flex;
 	justify-content: center;
@@ -246,7 +245,6 @@
 		}
 	}
 }
-
 .body {
 	&:not(:last-child) {
 		@include adaptiveValue("margin-bottom", 50, 25);
@@ -277,6 +275,12 @@
 		border-radius: rem(6);
 		max-width: rem(300);
 		width: 100%;
+		transition: border 0.3s;
+		@media (any-hover: hover) {
+			&:hover {
+				border: rem(1) solid #63a60e;
+			}
+		}
 	}
 	// .body__card
 	&__card {
@@ -295,6 +299,7 @@
 	&__picyure-link {
 		img {
 			width: 100%;
+			object-fit: contain;
 		}
 	}
 	// .body__overlay
@@ -404,13 +409,12 @@
 		}
 	}
 }
-
 .badge {
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-between;
 	padding: rem(12) rem(12) rem(7) rem(12);
-	//justify-content: space-between;
+
 	// .badge__stock
 	&__stock {
 		display: inline-block;
@@ -446,7 +450,6 @@
 		@include adaptiveValue("font-size", 28, 20);
 	}
 }
-
 .block {
 	// .block__content
 	&__content {
@@ -477,6 +480,259 @@
 		width: 100%;
 		height: rem(3);
 		background: rgba(99, 166, 14, 0.2);
+	}
+}
+//========================================================================================================================================================
+.stock {
+	@include adaptiveValue("padding-top", 75, 50);
+	@include adaptiveValue("padding-bottom", 75, 50);
+	background-color: #f5f5f5;
+	// .stock__container
+	&__container {
+	}
+	// .stock__title
+	&__title {
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 30, 25);
+		}
+	}
+	// .stock__box
+	&__box {
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 50, 25);
+		}
+	}
+	// .stock__list
+	&__list {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		column-gap: rem(25);
+		row-gap: rem(15);
+	}
+	// .stock__item
+	&__item {
+		font-weight: 700;
+		@include adaptiveValue("font-size", 15, 14);
+		line-height: math.div(21, 15);
+		letter-spacing: 0.03em;
+		text-transform: uppercase;
+		color: $dark-500;
+		cursor: pointer;
+		transition: color 0.3s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: #63a60e;
+			}
+		}
+	}
+}
+
+.cards {
+	display: grid;
+	justify-items: center;
+	@include adaptiveValue("column-gap", 30, 10, 0, 1290, 1240);
+	@include adaptiveValue("row-gap", 30, 15, 0, 1290, 1240);
+
+	@media (min-width: $mobileTwo) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	@media (min-width: em(900)) {
+		grid-template-columns: repeat(3, 1fr);
+	}
+	@media (min-width: em(1240)) {
+		grid-template-columns: repeat(4, 1fr);
+	}
+
+	// .cards__stock
+	&__stock {
+		background-color: $white;
+		border: rem(1) solid $silver-600;
+		border-radius: rem(6);
+		max-width: rem(300);
+		width: 100%;
+		padding: rem(12);
+		height: 100%;
+		transition: border 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				border: rem(1) solid #63a60e;
+			}
+		}
+	}
+	// .cards__card
+	&__card {
+		display: flex;
+		column-gap: rem(12);
+	}
+}
+
+.card {
+	// .card__picture
+	&__picture {
+		position: relative;
+		display: block;
+	}
+	// .card__picture-link
+	&__picture-link {
+	}
+	// .card__block
+	&__block {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		width: 100%;
+	}
+	// .card__heading
+	&__heading {
+		&:not(:last-child) {
+			margin-bottom: rem(5);
+		}
+	}
+	// .card__title
+	&__title {
+		font-weight: 600;
+		font-size: rem(14);
+		line-height: math.div(20, 14);
+		letter-spacing: 0.03em;
+	}
+	// .card__footer
+	&__footer {
+	}
+	// .card__all-price
+	&__all-price {
+		display: flex;
+		align-items: flex-end;
+		column-gap: rem(12);
+		flex-wrap: wrap;
+		row-gap: rem(5);
+	}
+	// .card__items
+	&__items {
+		display: flex;
+		align-items: flex-end;
+		justify-content: space-between;
+	}
+	// .card__description
+	&__description {
+		display: flex;
+		&:not(:last-child) {
+			margin-bottom: rem(5);
+		}
+	}
+	// .card__have
+	&__have {
+		font-weight: 600;
+		font-size: rem(10);
+		line-height: math.div(10, 10);
+		letter-spacing: 0.03em;
+		color: $green-900;
+	}
+	// .card__end
+	&__end {
+		font-weight: 600;
+		font-size: rem(10);
+		line-height: math.div(10, 10);
+		letter-spacing: 0.03em;
+		color: $red-900;
+	}
+	// .card__not
+	&__not {
+		font-weight: 600;
+		font-size: rem(10);
+		line-height: math.div(10, 10);
+		letter-spacing: 0.03em;
+		color: $silver-600;
+	}
+	// .card__price
+	&__price {
+		font-weight: 600;
+		font-size: rem(20);
+		line-height: math.div(20, 20);
+		letter-spacing: 0.03em;
+		color: $dark-500;
+		&_rub {
+			font-weight: 600;
+			&::after {
+				content: "₽";
+				margin-left: rem(0);
+				font-size: rem(14);
+			}
+		}
+	}
+	// .card__old-price
+	&__old-price {
+		position: relative;
+		font-size: rem(12);
+		line-height: math.div(12, 12);
+		letter-spacing: 0.03em;
+		color: $silver-600;
+
+		&::before {
+			content: "";
+			position: absolute;
+			border-bottom: rem(1) solid $silver-600;
+			width: 100%;
+			height: 50%;
+			bottom: 0;
+			transform: matrix(0.99, -0.17, -0.13, -0.99, 0, 0);
+		}
+
+		&_rub {
+			font-weight: 600;
+			&::after {
+				content: "₽";
+				margin-left: rem(0);
+			}
+		}
+	}
+}
+.badge {
+	// .badge__stock
+	&__stock {
+		// .badge__stock_position
+		&_position {
+			position: absolute;
+			top: rem(-5);
+			left: 0;
+		}
+	}
+	// .badge__card
+	&__card {
+		// .badge__card_new
+		&_new {
+		}
+		// .badge__card_hit
+		&_hit {
+		}
+	}
+}
+.block {
+	// .block__content
+	&__content {
+	}
+	// .block__more
+	&__more {
+	}
+}
+.rating-stock {
+	display: flex;
+	align-items: center;
+	column-gap: rem(2);
+	margin-left: rem(5);
+	span {
+		font-weight: 700;
+		font-size: rem(14);
+		line-height: math.div(14, 14);
+		letter-spacing: 0.03em;
+		color: $dark-500;
+	}
+	&::after {
+		@extend %ic;
+		content: "\e914";
+		font-size: rem(14);
+		color: $yellow-900;
 	}
 }
 //========================================================================================================================================================
